IaC/app/manifests/prereqs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging-app
